Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41623

Menu icons are drawn incorrectly with high DPI if stylesheet are applied

    XMLWordPrintable

Details

    Description

      Icon in menus are drawn incorrectly (distorted and wrong position) when the a style sheet is set which touches QMenu. So, this is basically qstylesheetstyle.cpp not handling a devicePixelRatio != 1 correctly.


      (Note that I scaled the screenshots down to 50% in order to fit them on normal screens)

      For Qt 5.3 this issue concerns only OSX + Retina. In 5.4 this is valid for all Desktop platforms.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sorvig Morten Sørvig
            portale Alessandro Portale
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes