OS X: Fix broken 2x menu icon when style sheet is applied

Task-number: QTBUG-41623
Change-Id: I4e0640a7739d0ce4f8758dd5d8d17882a6947467
Reviewed-by: Alessandro Portale <alessandro.portale@digia.com>
Reviewed-by: Morten Johan Sørvig <morten.sorvig@digia.com>